--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -1,25 +1,20 @@
 {
-  "name": "张三",
-  "short_name": "张三",
+  "name": "Sogrey",
+  "short_name": "Sogrey",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#2196f3",
-  "description": "张三的个人主页",
+  "description": "前端技术面试题",
   "theme_color": "blue",
   "icons": [
     {
       "src": "./photo.jpg",
-      "sizes": "144x144",
       "type": "image/png"
     }
   ],
   "related_applications": [
     {
       "platform": "web"
-    },
-    {
-      "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=cheeaun.hackerweb"
     }
   ]
 }
