--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "vuepress dev docs",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+	"deploy1": "npm run build & cd docs/.vuepress/dist & git init & git add -A & git commit -m 'deploy' & git push -f https://github.com/Sogrey/Web-QA.git master:gh-pages"
   },
   "keywords": [],
   "author": "",
