--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
     "deploy": "bash deploy.sh",
-	"deploy1": "npm run build & cd docs/.vuepress/dist & git init & git add -A & git commit -m 'deploy' & git push -f https://github.com/Sogrey/Web-QA.git master:gh-pages"
+    "deploy1": "npm run build & cd docs/.vuepress/dist & git init & git add -A & git commit -m 'deploy' & git push -f https://github.com/Sogrey/Web-QA.git master:gh-pages"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Sogrey",
+  "license": "MIT",
   "dependencies": {
-    "vuepress": "^0.14.4"
+    "vuepress": "^1.1.0"
   }
 }
